--- a/Untitled8.ipynb
+++ b/Untitled8.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPLkTfQZeCPdeKZvJIu7A7",
+      "authorship_tag": "ABX9TyPUqbu+m139QUc2BNyI5fT8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,11 +34,12 @@
       },
       "outputs": [],
       "source": [
-        "a = 1\n",
-        "b = -3\n",
-        "c = 2\n",
         "\n",
-        "# Solve the quadratic equation\n",
+        "a = float(input(\"Enter coefficient a: \"))\n",
+        "b = float(input(\"Enter coefficient b: \"))\n",
+        "c = float(input(\"Enter coefficient c: \"))\n",
+        "\n",
+        "\n",
         "discriminant = b**2 - 4*a*c\n",
         "\n",
         "if discriminant > 0:\n",
@@ -49,7 +50,8 @@
         "    root = -b / (2*a)\n",
         "    print(f\"There is one root: {root}\")\n",
         "else:\n",
-        "    print(\"No real roots exist\")\n"
+        "    print(\"No real roots exist\")\n",
+        "\n"
       ]
     }
   ]
