--- a/Untitled8.ipynb
+++ b/Untitled8.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUqbu+m139QUc2BNyI5fT8",
+      "authorship_tag": "ABX9TyMpvzTSCdslHqs1cj5xCPBq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,22 +35,23 @@
       "outputs": [],
       "source": [
         "\n",
-        "a = float(input(\"Enter coefficient a: \"))\n",
-        "b = float(input(\"Enter coefficient b: \"))\n",
-        "c = float(input(\"Enter coefficient c: \"))\n",
+        "with open(\"input.txt\", \"r\") as file:\n",
+        "    for line in file:\n",
+        "        a, b, c = map(float, line.split())\n",
         "\n",
         "\n",
-        "discriminant = b**2 - 4*a*c\n",
+        "        discriminant = b**2 - 4*a*c\n",
         "\n",
-        "if discriminant > 0:\n",
-        "    root1 = (-b + discriminant**0.5) / (2*a)\n",
-        "    root2 = (-b - discriminant**0.5) / (2*a)\n",
-        "    print(f\"The roots are {root1} and {root2}\")\n",
-        "elif discriminant == 0:\n",
-        "    root = -b / (2*a)\n",
-        "    print(f\"There is one root: {root}\")\n",
-        "else:\n",
-        "    print(\"No real roots exist\")\n",
+        "        if discriminant > 0:\n",
+        "            root1 = (-b + discriminant**0.5) / (2*a)\n",
+        "            root2 = (-b - discriminant**0.5) / (2*a)\n",
+        "            print(f\"Roots for {a}x² + {b}x + {c} = 0: {root1}, {root2}\")\n",
+        "        elif discriminant == 0:\n",
+        "            root = -b / (2*a)\n",
+        "            print(f\"Root for {a}x² + {b}x + {c} = 0: {root}\")\n",
+        "        else:\n",
+        "            print(f\"No real roots for {a}x² + {b}x + {c} = 0\")\n",
+        "\n",
         "\n"
       ]
     }
